; ModuleID = '/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-data.c_get_counter_visitors_given_version.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-data.c_get_counter_visitors_given_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.counter = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_counter_visitors_given_version(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.counter*, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i64, i64* %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call %struct.counter* @get_counter_old(i64 %7, i32 %8, i32 1)
  store %struct.counter* %9, %struct.counter** %6, align 8
  %10 = load %struct.counter*, %struct.counter** %6, align 8
  %11 = icmp ne %struct.counter* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %23

13:                                               ; preds = %2
  %14 = load %struct.counter*, %struct.counter** %6, align 8
  %15 = getelementptr inbounds %struct.counter, %struct.counter* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp eq i32 %16, -2
  br i1 %17, label %18, label %19

18:                                               ; preds = %13
  store i32 -2, i32* %3, align 4
  br label %23

19:                                               ; preds = %13
  %20 = load %struct.counter*, %struct.counter** %6, align 8
  %21 = getelementptr inbounds %struct.counter, %struct.counter* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %19, %18, %12
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local %struct.counter* @get_counter_old(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
